Fix memory leaks due to misuse of ElementAt().  Bug 252731, patch by Jonathan Watt <jonathan.watt@strath.ac.uk>, r+sr=bzbarsky